test/valid/this.js
var obj = { name: '3', getName: function() { return this.name; } };
obj;
var x = obj.getName();
x;
