test/invalid/prop_assign.js
function setX(obj, val) {
    obj.x = val;
}

var z = { x: 3 };
setX(z, 'a');
z; 
